# deltascribe-edge

./: .env.example  .gitignore  EVALUATION.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/audio/: __init__.py  transcriber.py
backend/app/context/: __init__.py  guidelines.py
backend/app/core/: config.py
backend/app/imaging/: preprocessor.py
backend/app/inference/: medgemma.py  medgemma_gguf.py  prompts.py
backend/app/orchestrator/: workflow.py
backend/app/output/: audit.py  delta.py  fhir.py  report.py
backend/app/retrieval/: __init__.py  cxr_foundation.py  evidence.py  medsiglip.py
backend/app/schemas/: analysis.py
backend/app/validation/: schema.py
data/demo_patients/cxr_001/: manifest.json
data/demo_patients/cxr_002/: manifest.json
data/demo_patients/cxr_003/: manifest.json
data/demo_patients/cxr_004/: manifest.json
data/demo_patients/cxr_005/: manifest.json
data/demo_patients/cxr_006/: manifest.json
data/demo_patients/cxr_007/: manifest.json
data/guidelines/: cxr_guidelines.md
docs/writeup/: DeltaScribe_Edge_Writeup.tex
frontend/: Dockerfile  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/features/: audit-panel.tsx  case-selector.tsx  control-bar.tsx  dictation-button.tsx  findings-panel.tsx  header.tsx  image-viewer.tsx  (+3 more)
frontend/lib/: api.ts
frontend/types/: api.ts
scripts/: convert_to_gguf.sh  download_demo_data.py  download_model.py  verify_demo_data.py
